<?xml version="1.0"?>
<package format="2">
  <name>tm_models</name>
  <version>1.0.0</version>
  <description>
    URDF description for TM12 (1300) robot arms
  </description>

  <author email="ken.tsai@tm-robot.com">Ken Tsai</author>
  <maintainer email="ken.tsai@tm-robot.com">Ken Tsai</maintainer>

  <license>BSD</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
